<resources>
    <string name="app_name">PanShipping</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="username_is_required">This field to Username is required!</string>
    <string name="field_is_required">This field is required!</string>
    <string name="field_to_password">This field to Password  is required!</string>
    <string name="problem_with_login">Problem with login.Try again...</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_password">Invalid password</string>
    <string name="re_password">Re-type Password</string>
    <string name="matching_password">"\"Password don't match!\" "</string>
    <string name="successfully_registration">"\"Successfully registration!\" "</string>
    <string name="press_back_again">"\"Press back once again to exit!\" "</string>
    <string name="add_product">Add Product</string>
    <string name="successfully_added_product">"\"Successfully added product!\" "</string>
    <string name="was_not_added_product">"\The product was not added successfully!\" "</string>
    <string name="select_image">"\"Picture is not required field!\" "</string>
    <string name="products">Products</string>
    <string name="my_products">My Products</string>
    <string name="all_products">All Products</string>
    <string name="was_not_change_product">"\The product was not changed successfully!\" "</string>
    <string name="the_list_is_empty">The list is empty!</string>
    <string name="shipped_product">Shipped product!</string>
    <string name="shipped_failed">Shipping failed!</string>
    <string name="field">Failed to update shipment!</string>
    <string name="progress"><font fgcolor='#826daa'>In progress!</font></string>
    <string name="transit"><font fgcolor='#fc8f00'>In transit!</font></string>
    <string name="delivered"><font fgcolor='#35df13'>Delivered!</font></string>
    <string name="error">An error has occurred!</string>
</resources>