<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="40dp"
        android:text="@string/products"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSubtitle"
        android:background="@color/teal_200"
        android:elevation="8dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tl_myProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_products" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tl_allProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_products" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addNewProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="@color/teal_200"
        android:scaleType="centerCrop"
        android:src="@drawable/add"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="297dp"
        tools:layout_editor_absoluteY="624dp" />
</RelativeLayout>

